---
title: Flujo de Estados MX (Solicitud de Credito)
---
stateDiagram-v2
    [*] --> created: create() / estado inicial

    created --> validating_document: update_status() -- MX bootstrap → validating_document_task
    validating_document --> fetching_bank_data: CURP válida -- fetching_bank_data_task
    validating_document --> rejected: CURP inválida
    validating_document --> technical_error: retries agotados

    fetching_bank_data --> validate_country_rules: BankProviderData persistida -- validate_country_rules_task
    fetching_bank_data --> technical_error: retries agotados / fallo proveedor

    validate_country_rules --> approved: valid=true -- CountryValidation persistida
    validate_country_rules --> rejected: valid=false
    validate_country_rules --> technical_error: retries agotados / datos faltantes

    approved --> [*]
    rejected --> [*]
    technical_error --> [*]

    note right of validating_document
        MX único: valida CURP contra registro.
        Puede rechazar antes de consultar banco.
    end note

    note right of fetching_bank_data
        Persiste BankProviderData antes de transicionar.
        Retry con Celery hasta technical_error.
    end note

    note right of approved
        Estado terminal. on_enter dispara notify_final_decision_task.
        Webhook saliente si WEBHOOK_URL está configurada.
    end note
